; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_reply_length.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_reply_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @reply_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reply_length(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i8* @luaL_checkstring(i32* %6, i32 1)
  store i8* %7, i8** %3, align 8
  store i32 0, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @memcpy(i32* %4, i8* %8, i32 4)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @little_endian(i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sub nsw i32 %13, 4
  %15 = call i32 @lua_pushinteger(i32* %12, i32 %14)
  ret i32 1
}

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32 @memcpy(i32*, i8*, i32) #1

declare dso_local i32 @little_endian(i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
